--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,6 +1,10 @@
 .app.light {
   --bg-color: #e8e8ea;
+  --inverted-bg-color: #0b0b50;
 
   --primary-color: #0232c2;
-  --secondary-color: #0449e0;
+  --secondary-color: #0050ff;
+
+  --inverted-primary-color: #049604;
+  --inverted--secondary-color: #04ff04;
 }
