--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,8 +1,8 @@
 .app_dark_theme {
     --bg-color: #0b0b50;
     --inverted-bg-color: #e8e8ea;
-    --primary-color: #049604;
-    --secondary-color: #04ff04;
+    --primary-color: #04ff04;
+    --secondary-color: #049604;
     --inverted-primary-color: #004eff;
     --inverted-secondary-color: #0232c2;
 }
