--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,8 +1,8 @@
 :root {
     --bg-color: #e8e8ea;
     --inverted-bg-color: #0b0b50;
-    --primary-color: #0232c2;
-    --secondary-color: #0050ff;
+    --primary-color: #0050ff;
+    --secondary-color: #0232c2;
     --inverted-primary-color: #04ff04;
     --inverted-secondary-color: #049604;
 }
