add article entity, slice, thunk, skeleton ui

--- a/src/app/styles/themes/black.scss
+++ b/src/app/styles/themes/black.scss
@@ -5,4 +5,8 @@
     --secondary-color: #454c4f;
     --inverted-primary-color: #f4f4fb;
     --inverted-secondary-color: #454c4f;
+
+    // skeleton
+    --skeleton-shadow: #9797f8;
+    --skeleton-color: #afafdf;
 }
