--- a/src/app/styles/themes/orange.scss
+++ b/src/app/styles/themes/orange.scss
@@ -5,4 +5,8 @@
     --secondary-color: #ea920e;
     --inverted-primary-color: #faf8f4;
     --inverted-secondary-color: #c61b0c;
+
+    // skeleton
+    --skeleton-shadow: #fff;
+    --skeleton-color: rgba(0 0 0 / 20%);
 }
