--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -5,4 +5,8 @@
     --secondary-color: #049604;
     --inverted-primary-color: #004eff;
     --inverted-secondary-color: #0232c2;
+
+    // skeleton
+    --skeleton-shadow: #2b2be8;
+    --skeleton-color: #1515ad;
 }
