add skeleton, code ui component, article details card

--- a/src/shared/ui/AppLink/AppLink.module.scss
+++ b/src/shared/ui/AppLink/AppLink.module.scss
@@ -1,5 +1,10 @@
 .AppLink {
     color: var(--primary-color);
+
+    &:hover {
+        opacity: 0.8;
+        fill-opacity: 0.8;
+    }
 }
 
 .primary {
