--- a/src/entities/Article/ui/ArticleDetails/ArticleDetails.module.scss
+++ b/src/entities/Article/ui/ArticleDetails/ArticleDetails.module.scss
@@ -1,7 +1,7 @@
 .ArticleDetails {
     min-height: 100%;
 
-    //height: 100vh - var(--navbar-height);
+    // height: 100vh - var(--navbar-height);
 }
 
 .avatar {
@@ -14,4 +14,23 @@
 
 .skeleton {
     margin-top: 15px;
+}
+
+.articleInfo {
+    display: flex;
+    align-items: center;
+}
+
+.icon {
+    margin-right: 8px;
+}
+
+.avatarWrapper {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+.block {
+    margin-top: 16px;
 }
